fix: fix dark mode button alignment
fixed the following issue: The dark mode switch doesn't align perfectly to other menu elements

#23

--- a/src/client/assets/scss/bundle/_navbar.scss
+++ b/src/client/assets/scss/bundle/_navbar.scss
@@ -71,3 +71,7 @@
     }
   }
 }
+
+.custom-control {
+  min-height: auto;
+}
